new design to works

--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -87,62 +87,28 @@
 			********************************************************************* -->
 			<section class="works" data-columns>
 				{% for work in works %}
-					<article class="work">
+					<article class="work" data-index="{{ loop.index }}">
 						<img src="{{work.photo}}">
 
-						<div class="work__featured">
-							{% if user %}
-								<!-- Logged User -->
-								{% if user.isAdmin %}
-									<!-- is Admin -->
-									{% if work.featured %}
-										<span id="{{ work.id }}" class="button-featured admin unfeatured" data-size='small'>
-											<div class="button-featured__inner">
-												<i class="fa fa-star"></i>
-											</div>
-										</span>
-									{% else %}
-										<span id="{{ work.id }}" class="button-featured admin disabled featured" data-size='small'>
-											<div class="button-featured__inner">
-												<i class="fa fa-star"></i>
-											</div>
-										</span>
-									{% endif %}
+						<div class="work__socials">
+							<div class="social-block">
+								{% if work.liked %}
+								<div class="social-item active js-likeButton">
+									<i class="fa fa-heart"></i>
+								</div>
 								{% else %}
-									<!-- else is User -->
-									{% if work.featured %}
-										<span id="{{ work.id }}" class="button-featured unfeatured" data-size='small'>
-											<div class="button-featured__inner">
-												<i class="fa fa-star"></i>
-											</div>
-										</span>
-									{% else %}
-										<span id="{{ work.id }}" class="button-featured disabled featured" data-size='small'>
-											<div class="button-featured__inner">
-												<i class="fa fa-star"></i>
-											</div>
-										</span>
-									{% endif %}
+								<div class="social-item js-likeButton">
+									<i class="fa fa-heart"></i>
+								</div>
 								{% endif %}
-							{% else %}
-								<!-- No logged User -->
-								{% if work.featured %}
-									<span id="{{ work.id }}" class="button-featured" data-size='small'>
-										<div class="button-featured__inner">
-											<i class="fa fa-star"></i>
-										</div>
-									</span>
-								{% endif %}
-
-							{% endif %}
+								<div class="social-item"><i class="fa fa-bars"></i></div>
+							</div>
 						</div>
 
-						<div class="work__like">
-							{% if work.liked %}
-								<button class="button-liked"><i class="fa fa-heart"></i></button>
-							{% else %}
-								<button class="button-liked hidden"><i class="fa fa-heart"></i></button>
-							{% endif %}
+						<div class="work__like-cover">
+							<div class="like-simbol fade">
+								<i class="fa fa-heart"></i>
+							</div>
 						</div>
 
 					</article>
@@ -155,118 +121,32 @@
 		</div>
 	</div>
 
-
-	<!-- ********************************************************************
-		$ SLOGAN
-	********************************************************************* -->
-	<!-- <section class="slogan">
-		<span class="slogan-text">Muestra tu talento artístico!</span>
-		<button class="button-solid js-signUpButton" data-size='large'>Sign Up</button>
-	</section> -->
-
-
 	{% include '../partials/footer.html' %}
 
-
-	<!-- ********************************************************************
-		$ LOGIN
-	********************************************************************* -->
-	<section class="login-modal">
-		<div class="login-box js-loginBox">
-			<header class="login-box__header">			
-				<div class="skinny-menu">
-					<a href="#" class="skinny-menu__item js-signInFormButton">
-						Ingresar
-					</a>
-					<a href="#" class="skinny-menu__item js-signUpFormButton">
-						Registrarme
-					</a>
-				</div>
-			</header>
-			<form class="login-box__form js-signUpForm">
-		 		<a href="#" class="facebook-button" data-expand='true'>
-					<i class="fa fa-facebook-official"></i>&nbsp; Registrarme con Facebook
-				</a>
-				<div class="separator-text">
-					<span class="line"></span>
-					<span class="text">Con email</span>
-					<span class="line"></span>
-				</div>
-				<input class="input" data-size='large' name="username" placeholder="Username" type="text">
-				<input class="input" data-size='large' name="email" placeholder="Email" type="email">
-				<input class="input" data-size='large' name="password" placeholder="Password" type="password">
-				<input class="input" data-size='large' name="first-name" placeholder="First Name" type="text">
-				<input class="input" data-size='large' name="last-name" placeholder="Last Name" type="text">
-				<select class="input" name="gender">
-					<option selected disabled>Género</option>
-					<option value="Male">Masculino</option>
-					<option value="Female">Femenino</option>
-				</select>
-				<div class="question">
-					<input name="question" type="checkbox" id="question">
-					<label for="question" class="medium-text">¿Eres Artista profesional?</label>
-				</div>
-				<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Registrarme" type="submit">
-				<p class="high-text note" data-size="small">Al registrarte estas aceptando los <strong>terminos y condiciones</strong> de Arte Manifiesto</p>
-			</form>
-			<form class="login-box__form js-signInForm">
-		 		<a href="#" class="facebook-button" data-expand='true'>
-					<i class="fa fa-facebook-official"></i>&nbsp; Ingresar con Facebook
-				</a>
-				<div class="separator-text">
-					<span class="line"></span>
-					<span class="text">Con email</span>
-					<span class="line"></span>
-				</div>
-				<input class="input" data-size='large' name="email" placeholder="Email" type="text">
-				<input class="input" data-size='large' name="password" placeholder="Password" type="password">
-				<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Ingresar" type="submit">
-				<p class="high-text note js-rememberFormButton" data-size="small">Recordar contraseña</p>
-			</form>
-			<form class="login-box__form js-rememberForm">
-				<div class="separator-text">
-					<span class="line"></span>
-					<span class="text">Recordar contraseña</span>
-					<span class="line"></span>
-				</div>
-				<input class="input" data-size='large' name="email" placeholder="Email" type="text">
-				<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Recordar" type="submit">
-				<p class="high-text note js-rememberBackButton" data-size="small">Ingresar</p>
-			</form>
-			<div class="login-box__closed js-loginClosed"><i class="fa fa-times"></i></div>
-		</div>
-	</section>
 	
 	<script type="text/template" id="work-template">
 
 		<article class="work">
+
 			<img src="<%= photo %>">
 
-			<div class="work__featured">
-
-				<% if (user) { %>
-
-					<% if (featured) { %>
-						<span id="<%= id %>" class="button-featured admin unfeatured" data-size='small'>
-							<div class="button-featured__inner"><i class="fa fa-star"></i></div>
-						</span>
+			<div class="work__socials">
+				<div class="social-block">
+					<% if(liked) { %>
+					<div class="social-item active js-likeButton">
+						<i class="fa fa-heart"></i>
+					</div>
 					<% } else { %>
-						<span id="<%= id %>" class="button-featured admin disabled featured" data-size='small'>
-							<div class="button-featured__inner"><i class="fa fa-star"></i></div>
-						</span>
+					<div class="social-item js-likeButton">
+						<i class="fa fa-heart"></i>
+					</div>
 					<% } %>
-
-				<% } else { %>
-
-					<% if (featured) { %>
-						<span id="<%= id %>" class="button-featured" data-size='small'>
-							<div class="button-featured__inner"><i class="fa fa-star"></i></div>
-						</span>
-					<% } %>
-
-				<% } %>
-
+					<div class="social-item"><i class="fa fa-bars"></i></div>
+				</div>
 			</div>
+
+			<div class="work__like-cover"></div>
+
 		</article>
 
 	</script>
@@ -345,3 +225,54 @@
 	</script>
 
 {% endblock %}
+
+						<!-- <div class="work__featured">
+							{% if user %}
+								{% if user.isAdmin %}
+									{% if work.featured %}
+										<span id="{{ work.id }}" class="button-featured admin unfeatured" data-size='small'>
+											<div class="button-featured__inner">
+												<i class="fa fa-star"></i>
+											</div>
+										</span>
+									{% else %}
+										<span id="{{ work.id }}" class="button-featured admin disabled featured" data-size='small'>
+											<div class="button-featured__inner">
+												<i class="fa fa-star"></i>
+											</div>
+										</span>
+									{% endif %}
+								{% else %}
+									{% if work.featured %}
+										<span id="{{ work.id }}" class="button-featured unfeatured" data-size='small'>
+											<div class="button-featured__inner">
+												<i class="fa fa-star"></i>
+											</div>
+										</span>
+									{% else %}
+										<span id="{{ work.id }}" class="button-featured disabled featured" data-size='small'>
+											<div class="button-featured__inner">
+												<i class="fa fa-star"></i>
+											</div>
+										</span>
+									{% endif %}
+								{% endif %}
+							{% else %}
+								{% if work.featured %}
+									<span id="{{ work.id }}" class="button-featured" data-size='small'>
+										<div class="button-featured__inner">
+											<i class="fa fa-star"></i>
+										</div>
+									</span>
+								{% endif %}
+
+							{% endif %}
+						</div> -->
+
+						<!-- <div class="work__like">
+							{% if work.liked %}
+								<button class="button-liked"><i class="fa fa-heart"></i></button>
+							{% else %}
+								<button class="button-liked hidden"><i class="fa fa-heart"></i></button>
+							{% endif %}
+						</div> -->
