--- a/public/stylus/elements/inputs.styl
+++ b/public/stylus/elements/inputs.styl
@@ -87,6 +87,8 @@
 	font-family 'Raleway'
 	border solid 1px #ddd
 	color #333
+	max-width 400px
+	margin auto
 	.search-option
 		padding .5rem 1rem
 		cursor pointer
