--- a/public/css/index.css
+++ b/public/css/index.css
@@ -469,6 +469,8 @@ html {
   font-family: 'Raleway';
   border: solid 1px #ddd;
   color: #333;
+  max-width: 400px;
+  margin: auto;
 }
 .search-options .search-option {
   padding: 0.5rem 1rem;
@@ -755,25 +757,66 @@ html {
   -webkit-box-shadow: rgba(0,0,0,0.35) 0 0 10px;
   box-shadow: rgba(0,0,0,0.35) 0 0 10px;
 }
-.works .work__featured {
+.works .work__socials {
+  display: none;
   position: absolute;
   top: 0;
-  right: 0;
-  -webkit-transform: translate(-12.5%, -37.5%);
-  -moz-transform: translate(-12.5%, -37.5%);
-  -o-transform: translate(-12.5%, -37.5%);
-  -ms-transform: translate(-12.5%, -37.5%);
-  transform: translate(-12.5%, -37.5%);
-}
-.works .work__like {
-  position: absolute;
-  top: 0;
+  bottom: 0;
   left: 0;
-  -webkit-transform: translate(50%, -35%);
-  -moz-transform: translate(50%, -35%);
-  -o-transform: translate(50%, -35%);
-  -ms-transform: translate(50%, -35%);
-  transform: translate(50%, -35%);
+  right: 0;
+}
+.works .work__socials .social-block {
+  margin: auto;
+}
+.works .work__socials .social-block .social-item {
+  background: rgba(0,0,0,0.375);
+  color: #fff;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  padding: 0.5em;
+  margin: 0.5em;
+  font-size: 1em;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+}
+.works .work__socials .social-block .social-item.active {
+  background: #fff;
+  color: #f54545;
+}
+.works .work__like-cover {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  background: rgba(0,128,0,0.25);
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+}
+.works .work__like-cover .like-simbol {
+  color: #fff;
+  margin: auto;
+}
+@media (min-width: 920px) {
+  .works .work__like-cover {
+    display: none;
+  }
+  .works .work:hover .work__socials {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+  }
 }
 @media screen and (min-width: 151px) and (max-width: 300px) {
   .works[data-columns]::before {
@@ -825,6 +868,38 @@ html {
 }
 .size-1of6 {
   width: 16.666666666666668%;
+}
+@-moz-keyframes fade {
+  0% {
+    font-size: 0;
+  }
+  100% {
+    font-size: 2rem;
+  }
+}
+@-webkit-keyframes fade {
+  0% {
+    font-size: 0;
+  }
+  100% {
+    font-size: 2rem;
+  }
+}
+@-o-keyframes fade {
+  0% {
+    font-size: 0;
+  }
+  100% {
+    font-size: 2rem;
+  }
+}
+@keyframes fade {
+  0% {
+    font-size: 0;
+  }
+  100% {
+    font-size: 2rem;
+  }
 }
 .more {
   max-width: 1100px;
