--- a/public/stylus/elements/inputs.styl
+++ b/public/stylus/elements/inputs.styl
@@ -87,7 +87,6 @@
 	font-family 'Raleway'
 	border solid 1px #ddd
 	color #333
-	max-width 400px
 	margin auto
 	.search-option
 		padding .5rem 1rem
@@ -99,6 +98,9 @@
 		&:hover
 			background #ededed
 
+@media (min-width: tablet-medium)
+	.search-options
+		max-width 400px
 
 /*------------------------------------*
 	$ DOUBLE RANGE
