--- a/public/css/index.css
+++ b/public/css/index.css
@@ -469,7 +469,6 @@ html {
   font-family: 'Raleway';
   border: solid 1px #ddd;
   color: #333;
-  max-width: 400px;
   margin: auto;
 }
 .search-options .search-option {
@@ -484,6 +483,11 @@ html {
 }
 .search-options .search-option:hover {
   background: #ededed;
+}
+@media (min-width: 720px) {
+  .search-options {
+    max-width: 400px;
+  }
 }
 .double-range__slider {
   font-size: 1.25rem;
@@ -793,7 +797,6 @@ html {
   top: 0;
   bottom: 0;
   width: 100%;
-  background: rgba(0,128,0,0.25);
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flex;
@@ -804,6 +807,14 @@ html {
 .works .work__like-cover .like-simbol {
   color: #fff;
   margin: auto;
+  font-size: 0;
+}
+.works .work__like-cover .like-simbol.fade {
+  -webkit-animation: 0.5s fade;
+  -moz-animation: 0.5s fade;
+  -o-animation: 0.5s fade;
+  -ms-animation: 0.5s fade;
+  animation: 0.5s fade;
 }
 @media (min-width: 920px) {
   .works .work__like-cover {
@@ -872,33 +883,77 @@ html {
 @-moz-keyframes fade {
   0% {
     font-size: 0;
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+  }
+  50% {
+    opacity: 1;
+    -ms-filter: none;
+    filter: none;
   }
   100% {
-    font-size: 2rem;
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    font-size: 3rem;
   }
 }
 @-webkit-keyframes fade {
   0% {
     font-size: 0;
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+  }
+  50% {
+    opacity: 1;
+    -ms-filter: none;
+    filter: none;
   }
   100% {
-    font-size: 2rem;
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    font-size: 3rem;
   }
 }
 @-o-keyframes fade {
   0% {
     font-size: 0;
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+  }
+  50% {
+    opacity: 1;
+    -ms-filter: none;
+    filter: none;
   }
   100% {
-    font-size: 2rem;
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    font-size: 3rem;
   }
 }
 @keyframes fade {
   0% {
     font-size: 0;
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+  }
+  50% {
+    opacity: 1;
+    -ms-filter: none;
+    filter: none;
   }
   100% {
-    font-size: 2rem;
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    font-size: 3rem;
   }
 }
 .more {
