--- a/public/stylus/discover-works.styl
+++ b/public/stylus/discover-works.styl
@@ -108,3 +108,15 @@
 @import 'objects/navigation.styl'
 @import 'objects/category-menu.styl'
 @import 'objects/section-title.styl'
+
+
+.empty-result
+	max-width max-width
+	margin auto
+	padding 2rem 1rem
+	text-align center
+	// display none
+	a
+		font-size 1rem
+		fon-weight 600
+		color #333
