add fade like to more

--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -181,8 +181,12 @@
 				</div>
 			</div>
 
-			<div class="work__like-cover"></div>
-
+			<div class="work__like-cover">
+				<div class="like-simbol">
+					<i class="fa fa-heart"></i>
+				</div>
+			</div>
+			
 		</article>
 
 	</script>
