remove collect to works

--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -103,7 +103,7 @@
 									<i class="fa fa-heart"></i>
 								</div>
 								{% endif %}
-								<div class="social-item"><i class="fa fa-bars"></i></div>
+								<!-- <div class="social-item"><i class="fa fa-bars"></i></div> -->
 							</div>
 						</div>
 
@@ -177,7 +177,6 @@
 						<i class="fa fa-heart"></i>
 					</div>
 					<% } %>
-					<div class="social-item"><i class="fa fa-bars"></i></div>
 				</div>
 			</div>
 
