--- a/app/views/pages/products.html
+++ b/app/views/pages/products.html
@@ -184,7 +184,7 @@
 				</div>
 				<div class="product-social">
 					<div class="like">
-						<span class="button-like"> <i class="fa fa-heart-o"></i> <span>{{product.likes}}</span> </span>
+						<span class="button-like"> <i class="fa fa-heart-o"></i> <span>{{likes}}</span> </span>
 					</div>
 					<div class="wish-list">
 						<span class="button-wish-list"> <i class="fa fa-square-o"></i> 500 </span>
@@ -285,3 +285,11 @@
 	</script>
 
 {% endblock %}
+
+<!-- 	// localhost:3000/username(del dueno de la obra)/product/nameSlugify(de la obra)
+	
+	//	localhost:3000/username(logeado)/product/like
+	//	localhost:3000/username(logeado)/product/unlike
+
+	//	localhost:3000/username(logeado)/product/featured
+	//	localhost:3000/username(logeado)/product/unfeatured -->
