--- a/public/stylus/market.styl
+++ b/public/stylus/market.styl
@@ -20,4 +20,15 @@
 @import 'objects/category-menu.styl'
 @import 'objects/navigation.styl'
 @import 'objects/section-title.styl'
-	
+
+
+.empty-result
+	max-width max-width
+	margin auto
+	padding 2rem 1rem
+	text-align center
+	// display none
+	a
+		font-size 1rem
+		fon-weight 600
+		color #333
