--- a/public/stylus/objects/products.styl
+++ b/public/stylus/objects/products.styl
@@ -43,6 +43,11 @@
 		padding .5em 1em
 		display flex
 		justify-content space-between
+		.price
+			font-size .9em
+			font-weight 500
+			letter-spacing .5px
+			font-family 'Raleway'
 	&:hover
 		box-shadow rgba(0,0,0,0.35) 0 0 10px
 	&__featured
